Posicionando bolas 9 e 10 na árvore

--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
               <p>10 anos</p>
               <button>Adotar</button>
             </div>
-        </div>
+        </div>                
+        <div id="pin-1-10" class="girl">
+          <div class="pin-text">
+            <h3>Erika</h3>
+            <p>15 anos</p>
+            <button>Adotar</button>
+          </div>
+      </div>
     </div>
     <div class="content">
         <p>
